--- a/Appcucidarah/MainWindow.xaml
+++ b/Appcucidarah/MainWindow.xaml
@@ -27,6 +27,7 @@
         <mui:LinkGroup DisplayName="Jadwal">
             <mui:LinkGroup.Links>
                 <mui:Link DisplayName="Daftar Jadwal" Source="/Forms/DaftarJadwal.xaml"/>
+                <mui:Link DisplayName="Jadwal Pasien" Source="/Forms/JadwalPasien.xaml"/>
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
         <mui:LinkGroup DisplayName="User">
