--- a/Appcucidarah/Forms/CuciDarah.xaml
+++ b/Appcucidarah/Forms/CuciDarah.xaml
@@ -2,20 +2,47 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:self="clr-namespace:Appcucidarah.Models.Data"
+      xmlns:v="clr-namespace:Appcucidarah.Models.Views"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
 	Title="CuciDarah">
 
     <Grid Style="{StaticResource ContentRoot}">
-        <DataGrid>
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="No"/>
-                <DataGridTextColumn Header="Nama Pasien"/>
-                <DataGridTextColumn Header="Jam Mulai"/>
-                <DataGridTextColumn Header="Jam Selesai"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="60"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0">
+            <TreeView ItemsSource="{Binding SourceView}" HorizontalAlignment="Stretch" Background="{x:Null}" SelectedItemChanged="TreeView_SelectedItemChanged">
+                <TreeView.Resources>
+                    <HierarchicalDataTemplate DataType="{x:Type v:CuciDarahView}" ItemsSource="{Binding Pacients}">
+                        <StackPanel Orientation="Horizontal" Background="#FF95C4C9" Margin="0,20,0,0">
+                            <TextBlock Text="{Binding HariPertama}" Margin="10" />
+                            <TextBlock Text="-" Margin="10" />
+                            <TextBlock Text="{Binding HariKedua}" Margin="10" />
+                            <TextBlock Text="-" Margin="10" />
+                            <TextBlock Text="{Binding Shif}" Margin="10" />
+                        </StackPanel>
 
+
+                    </HierarchicalDataTemplate>
+                    <DataTemplate DataType="{x:Type self:pasien}">
+                        <StackPanel Orientation="Horizontal" Background="#FFE7F1C1">
+                            <TextBlock Text="{Binding NomorPasien}" Margin="10" />
+                            <TextBlock Text="{Binding Nama}" Margin="10" />
+                            <TextBlock Text="{Binding JenisKelamin}" Margin="10" />
+                            <TextBlock Text="{Binding Agama}" Margin="10" />
+                            <TextBlock Text="{Binding  Kontak.NomorTelepon}" Margin="10" />
+                        </StackPanel>
+                    </DataTemplate>
+                </TreeView.Resources>
+            </TreeView>
+        </StackPanel>
+        <WrapPanel Grid.Row="1">
+            <Button Content="Proses" Command="{Binding ProccessCommand}" Style="{StaticResource myButtonSuccess}"/>
+            <Button Content="Keluar" Command="{Binding KeluarCommand}" Style="{StaticResource  myButtonError}"/>
+        </WrapPanel>
     </Grid>
 </Page>
