--- a/Appcucidarah/Forms/TambahCuciDarah.xaml
+++ b/Appcucidarah/Forms/TambahCuciDarah.xaml
@@ -1,16 +1,18 @@
-﻿<Page x:Class="Appcucidarah.Forms.TambahCuciDarah"
+﻿<mui:ModernWindow x:Class="Appcucidarah.Forms.TambahCuciDarah"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+         xmlns:mui="http://firstfloorsoftware.com/ModernUI"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+                 d:DesignHeight="300" d:DesignWidth="300"
+                  Style="{StaticResource BlankWindow}"
 	Title="TambahCuciDarah">
 
     <Grid Style="{StaticResource ContentRoot}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="40*"/>
-            <RowDefinition Height="60*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="25*"/>
@@ -18,20 +20,25 @@
             <ColumnDefinition Width="25*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="0" Grid.RowSpan="2">
-            <Label Content="Pilih Pasien" Margin="5"/>
-            <Label Content="Jam Mulai" Margin="5"/>
-            <Label Content="Jam Selesai" Margin="5"/>
-            <Label Content="Pilih Perawat" Margin="5"/>
+            <Label Content="Nomor Pasien" Style="{StaticResource myLabel}"/>
+            <Label Content="Nama Pasien" Style="{StaticResource myLabel}"/>
+            <Label Content="Dokter" Style="{StaticResource myLabel}"/>
+            <Label Content="Perawat" Style="{StaticResource myLabel}"/>
+            <Label Content="Mulai" Style="{StaticResource myLabel}"/>
+            <Label Content="Berakhir" Style="{StaticResource myLabel}"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.RowSpan="2">
-            <ComboBox Margin="2"></ComboBox>
-            <TextBox Margin="2"></TextBox>
-            <TextBox Margin="2"></TextBox>
-            <ComboBox Margin="2"></ComboBox>
+            <TextBlock Text="{Binding Pacient.NomorPasien}" Style="{DynamicResource mytextBlock}"></TextBlock>
+            <TextBlock Text="{Binding Pacient.Nama}" Style="{DynamicResource mytextBlock}"></TextBlock>
+            <TextBlock Text="{Binding Pacient.Dokter.Nama}" Style="{DynamicResource mytextBlock}"></TextBlock>
+            <TextBlock Text="{Binding Pacient.Perawat.Nama}" Style="{DynamicResource mytextBlock}"></TextBlock>
+            <TextBlock Text="{Binding JamMulai}" Style="{DynamicResource mytextBlock}"></TextBlock>
+            <TextBlock Text="{Binding JamAkhir}" Style="{DynamicResource mytextBlock}"></TextBlock>
         </StackPanel>
-        <WrapPanel Grid.Column="1" Grid.Row="1">
-            <Button Content="Reset" Margin="2"></Button>
-            <Button Content="Simpan" Margin="2"></Button>
+        <WrapPanel Grid.ColumnSpan="3" Grid.Row="1">
+            <Button Command="{Binding SaveCommand}" Content="{Binding SaveCommandContent}" Style="{StaticResource myButtonSuccess}"></Button>
+            
+            <Button Command="{Binding CancelCommand}" Content="Batal" Style="{StaticResource myButtonError}"></Button>
         </WrapPanel>
     </Grid>
-</Page>
+</mui:ModernWindow>
