--- a/Appcucidarah/MyStayle.xaml
+++ b/Appcucidarah/MyStayle.xaml
@@ -830,5 +830,12 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="mytextBlock" TargetType="{x:Type TextBlock}">
+        <Setter Property="TextWrapping" Value="NoWrap"/>
+        <Setter Property="TextTrimming" Value="None"/>
+        <Setter Property="Padding" Value="2"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Height" Value="30"/>
+    </Style>
 
 </ResourceDictionary>
