--- a/Appcucidarah/MainWindow.xaml
+++ b/Appcucidarah/MainWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<mui:ModernWindow x:Class="Appcucidarah.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:mui="http://firstfloorsoftware.com/ModernUI" WindowState="Maximized"
-        Title="MainWindow" Height="545" Width="525">
+        xmlns:mui="http://firstfloorsoftware.com/ModernUI" WindowState="Maximized"
+        Title="MainWindow" Height="545" Width="525" 
+        ContentSource="/Forms/MenuUtama.xaml">
     <mui:ModernWindow.MenuLinkGroups>
-        <mui:LinkGroup DisplayName="Home">
-            <mui:LinkGroup.Links>
+        <mui:LinkGroup DisplayName="Home"  >
+            <mui:LinkGroup.Links >
                 <mui:Link DisplayName="Menu Utama" Source="/Forms/MenuUtama.xaml"/>
                 <mui:Link DisplayName="Cuci Darah" Source="/Forms/CuciDarah.xaml"/>
             </mui:LinkGroup.Links>
@@ -29,6 +30,7 @@
             <mui:LinkGroup.Links>
                 <mui:Link DisplayName="Daftar Jadwal" Source="/Forms/DaftarJadwal.xaml"/>
                 <mui:Link DisplayName="Jadwal Pasien" Source="/Forms/JadwalPasien.xaml"/>
+                <mui:Link DisplayName="Permintaan Pindah" Source="/Forms/PermintaanPindah.xaml"/>
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
         <mui:LinkGroup DisplayName="User">
@@ -37,6 +39,12 @@
                 <mui:Link DisplayName="Tambah User" Source="/Forms/TambahUser.xaml"/>
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
-       
+        <mui:LinkGroup DisplayName="Report">
+            <mui:LinkGroup.Links>
+                <mui:Link DisplayName="SMS FORMAT" Source="/Forms/Help.xaml"/>
+                <mui:Link DisplayName="Report Cuci Darah" Source="/Forms/ReportCuciDarah.xaml"/>
+            </mui:LinkGroup.Links>
+        </mui:LinkGroup>
+
     </mui:ModernWindow.MenuLinkGroups>
 </mui:ModernWindow>
